// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add items component  render as expected when directions is passed as props 1`] = `
<div
  className="col-12 items "
>
  <div
    className="items-header"
  >
    <h4
      className="items-header-text"
    >
      ingredients  0
    </h4>
    <Form
      action=""
      className=""
      disabled={false}
      lg={false}
      method=""
      onSubmit={[Function]}
      primary={false}
      primaryInverse={false}
      secondary={true}
      secondaryInverse={false}
      style={Object {}}
      submitBtnText="add ingredient"
    >
      <Field
        className="no-margin add-item-input"
        component={[Function]}
        externalError={
          Object {
            "error": Array [],
            "touched": true,
          }
        }
        fgClassName="d-flex flex-column no-margin"
        id="ingredient"
        name="ingredient"
        onFocus={[Function]}
        placeholder=""
        type="text"
        validate={[Function]}
      />
    </Form>
  </div>
  <div
    className="col-12 items-list-wrapper"
  >
    <List
      Component={null}
      componentType="ingredient"
      deleteItem={[Function]}
      directions={true}
      editItem={[Function]}
      ingredients={false}
      items={Array []}
      name="ingredient"
      uniquenessChecker={[Function]}
    />
  </div>
</div>
`;

exports[`Add items component  render as expected when form is submitted 1`] = `
<div
  className="col-12 items "
>
  <div
    className="items-header"
  >
    <h4
      className="items-header-text"
    >
      ingredients  0
    </h4>
    <Form
      action=""
      className=""
      disabled={false}
      lg={false}
      method=""
      onSubmit={[Function]}
      primary={false}
      primaryInverse={false}
      secondary={true}
      secondaryInverse={false}
      style={Object {}}
      submitBtnText="add ingredient"
    >
      <Field
        className="no-margin add-item-input"
        component={[Function]}
        externalError={
          Object {
            "error": Array [],
            "touched": true,
          }
        }
        fgClassName="d-flex flex-column no-margin"
        id="ingredient"
        name="ingredient"
        onFocus={[Function]}
        placeholder=""
        type="text"
        validate={[Function]}
      />
    </Form>
  </div>
  <div
    className="col-12 items-list-wrapper"
  >
    <List
      Component={null}
      componentType="ingredient"
      deleteItem={[Function]}
      directions={true}
      editItem={[Function]}
      ingredients={true}
      items={Array []}
      name="ingredient"
      uniquenessChecker={[Function]}
    />
  </div>
</div>
`;

exports[`Add items component  render as expected when name field has focus 1`] = `
<div
  className="col-12 items "
>
  <div
    className="items-header"
  >
    <h4
      className="items-header-text"
    >
      ingredients  0
    </h4>
    <Form
      action=""
      className=""
      disabled={false}
      lg={false}
      method=""
      onSubmit={[Function]}
      primary={false}
      primaryInverse={false}
      secondary={true}
      secondaryInverse={false}
      style={Object {}}
      submitBtnText="add ingredient"
    >
      <Field
        className="no-margin add-item-input"
        component={[Function]}
        externalError={
          Object {
            "error": Array [],
            "touched": true,
          }
        }
        fgClassName="d-flex flex-column no-margin"
        id="ingredient"
        name="ingredient"
        onFocus={[Function]}
        placeholder=""
        type="text"
        validate={[Function]}
      />
    </Form>
  </div>
  <div
    className="col-12 items-list-wrapper"
  >
    <List
      Component={null}
      componentType="ingredient"
      deleteItem={[Function]}
      directions={true}
      editItem={[Function]}
      ingredients={true}
      items={Array []}
      name="ingredient"
      uniquenessChecker={[Function]}
    />
  </div>
</div>
`;

exports[`Add items component  render as expected when there is external validation error 1`] = `
<div
  className="col-12 items "
>
  <div
    className="items-header"
  >
    <h4
      className="items-header-text"
    >
      ingredients  0
    </h4>
    <Form
      action=""
      className=""
      disabled={false}
      lg={false}
      method=""
      onSubmit={[Function]}
      primary={false}
      primaryInverse={false}
      secondary={true}
      secondaryInverse={false}
      style={Object {}}
      submitBtnText="add ingredient"
    >
      <Field
        className="no-margin add-item-input"
        component={[Function]}
        externalError={
          Object {
            "error": Array [
              "error",
            ],
            "touched": true,
          }
        }
        fgClassName="d-flex flex-column no-margin"
        id="ingredient"
        name="ingredient"
        onFocus={[Function]}
        placeholder=""
        type="text"
        validate={[Function]}
      />
    </Form>
  </div>
  <div
    className="col-12 items-list-wrapper"
  >
    <List
      Component={null}
      componentType="ingredient"
      deleteItem={[Function]}
      directions={true}
      editItem={[Function]}
      ingredients={true}
      items={Array []}
      name="ingredient"
      uniquenessChecker={[Function]}
    />
  </div>
</div>
`;
